fix title breaking to second line on mobile

--- a/themes/learnbuffalo/assets/scss/main.scss
+++ b/themes/learnbuffalo/assets/scss/main.scss
@@ -58,7 +58,7 @@ p {
   h1 {
     background-color: $primary;
     color: $tertiary;
-    display: inline;
+    display: inline-block;
     padding: 15px 35px;
     clip-path: polygon(15px 8%, 100% 0%, calc(100% - 15px) 92%, 0% 100%);
   }
